Dropdown fix
Resolved padding issue that was misaligning filter and search elements

--- a/styles/Filter.module.css
+++ b/styles/Filter.module.css
@@ -117,7 +117,7 @@
   color: #1c478c;
   background-color: #fff;
   flex: 1;
-  padding: 0 35px 0; 
+  padding: 0px 35px 0px 5px; 
   background-image: url('../images/down_arrow_icon.svg');
   background-position: calc(100% - 10px) center; /* Adjust position to not touch the border */
   background-repeat: no-repeat;
@@ -133,7 +133,6 @@ background-color: #f5f5f6;
 
 .c-search-submit {
 height: 40px;
-font-weight: 800;
 background-color: #fb5915;
 color: #fff;
 border-radius: 20px;
